# openchat

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LlamaBoss.cpp  LlamaBoss.rc  LlamaBoss.slnx  LlamaBoss.vcxproj  LlamaBoss.vcxproj.filters  README.md  Resource.rc  app_state.cpp  app_state.h  chat_client.cpp  chat_client.h  chat_display.cpp  chat_display.h  chat_history.cpp  chat_history.h  conversation_sidebar.cpp  conversation_sidebar.h  markdown_renderer.cpp  markdown_renderer.h  message_router.cpp  message_router.h  model_manager.cpp  model_manager.h  modelfile_creator.cpp  modelfile_creator.h  openchat.cpp  openchat.sln  openchat.vcxproj  openchat.vcxproj.filters  resource.h  resource1.h  settings.cpp  settings.h  theme.cpp  theme.h  vcpkg.json
docs/screenshots/: README.md
